assets/css/style.css
/* ... */
.xmark_sm {
    position: absolute;
    top: 10px;
    right: 0;
    width: 30px;
    height: 30px;
}

.btn-apply a{
    font-family: 'Red Hat Display', sans-serif;
    font-size: 19px;
    font-weight: 700;
    text-align: center;
    color: #fff;
    margin-bottom: 50px;
    border-radius: 4px;
    border: 1px solid #041228;
    padding: 15px 69px;
    text-decoration: none;
    margin: 0 auto;
    display: block;
    width: max-content;
    background-color: #041228;
}


@media(max-width: 500px){
    .btn-apply a {
        font-size: 15px;
        padding: 15px 50px;
    }
}

.menuFooter .items-menu{
    display: flex;
    gap: 100px;
}

.menuFooter .items-menu ul{
    display: block;
}

.menuFooter .item-menu label {
    color: #041228;
    font-size: 19px;
    margin-bottom: 10px;
    font-weight: 600;
}

.backToCategory{
    display: flex;
    align-items: center;
    gap: 20px;
    justify-content: center;
    margin-bottom: 20px;
}

@media(max-width: 500px){
    .backToCategory {
        display: flex;
        align-items: center;
        gap: 15px;
        justify-content: center;
        margin-bottom: 20px;
        flex-wrap: wrap;
    }

    button.btnBack{
        font-size: 12px;
        padding: 15px 10px;
        width: 47%;
    }
}

.logos-footer>a img{
    width: 35px;
}

.btn-apply-navbar{
    background-color: #EACA91;
    font-size: 18px;
    color: #5c4a2a;
    text-decoration: none;
    padding: 8px 16px;
    border-radius: 50px;
    font-weight: bold;
    text-transform: uppercase;
    position: relative;
    box-shadow: 0 0 10px #ffffff;
}

.btn-apply-navbar::after {
    content: '';
    position: absolute;
    inset: 0;
    border-radius: 50px;
    box-shadow: 0 0 30px #ffffff;
    opacity: 0;
    animation: blurr 2s infinite;
    will-change: opacity;
    pointer-events: none;
}

@keyframes blurr {
  0%,
  100% {
    opacity: 0;
  }

  50% {
    opacity: 1;
  }
}

@keyframes fade {
  0% {
    opacity: 100%;
  }
  100% {
    opacity: 0%;
  }
}

.checkout-stripe .simpay-checkout-form{
    max-width: 40%;
    display: block;
    margin: 0 auto;
}

.checkout-stripe .simpay-form-title{
    text-align:center !important;
}

.checkout-stripe .simpay-form-description{
    text-align:center !important;
}

.checkout-stripe{
    padding-bottom: 50px;
}

@media(max-width:500px){
    .checkout-stripe .simpay-checkout-form {
        max-width: 100%;
    }
}
.form-contact nav{
    display: block;
}
.form-contact .tab-content{
    background-color: #1E2A3E;
    padding: 30px;
    border-radius: 0 0 12px 12px;
}
.form-contact .nav-tabs{
    border:none;
}

.form-contact button#nav-profile-tab {
    font-size: 14px;
    color: #fff;
    font-family: 'Inter';
}
.form-contact .nav-tabs .nav-link.active{
    color: #fff;
    background-color: #1E2A3E;
    border-color: #1E2A3E;
}

.form-contact .nav-tabs .nav-link:hover{
    border-color: transparent;
}
.form-contact .nav-tabs .nav-link:focus{
    border-color: transparent;
}
.simpay-form-title{
    display: none !important;
}
.simpay-form-description{
    display:none !important;
}

.p-FieldLabel{
    color: #ECECEC !important;
    font-size: 14px !important;
    font-weight: 400 !important;
}


/* thankyou page stripe*/
.section-hero-stripe .card {
    display: flex;
    width: 808px;
    flex-direction: column; /* Stack elements vertically */
    align-items: center; /* Center align content */
    justify-content: center;
    text-align: center; /* Center the text */
    padding: 20px;
    border-radius: 10px; /* Optional rounded corners */
    box-shadow:none; /* Optional shadow */
    background-color:transparent;
}

.page-stripe-thanks .col-12 {
    flex: 0 0 100%; /* Take up full width */
    max-width: 100%;
    padding: 10px; /* Optional padding */
}

.section-hero-stripe .card img {
    max-width: 100%; /* Make sure the image scales within the container */
    height: auto; /* Maintain aspect ratio */
    margin-bottom: 20px; /* Optional spacing between image and text */
}

.section-hero-stripe .card-body h1 {
    font-size: 44px;
    color: #fff;
    font-weight: 700;
}
.section-hero-stripe .card-body p {
    font-size: 20px;
    color: #fff;
    font-weight: 400;
}
.page-stripe-thanks .content {
    display: flex;
    flex-direction: column; 
    justify-content: center;
    padding: 20px;
    align-items: center;
}
.page-stripe-thanks .content h2{
    font-size:40px;
    color : #041228;
    font-weight: 700;
    text-align:center;
}

.section-hero-stripe {
    background-color: #041228;
    height: 774px;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 0px 0px 0px 150px;
}

.page-stripe-thanks .content ul li .text-t1{
    color:#041228;
    font-size: 20px;
    line-height:32px;
    font-weight: 400;
}

.page-stripe-thanks .content .text-t2{
    color:#041228;
    font-size: 20px;
    line-height:32px;
    font-weight: 500;
}
.bnr-contact .contact{
    display: flex;
    justify-content: center;
    align-items: center;

    
}
.bnr-contact .social-media{
    align-items: center;
    background-color:#041228;
    width: 100%;
    height: auto;
    border-radius: 80px 0px 80px 0px;
    background-image: url('../../assets/img/border-s.png');
    background-size: cover;
    background-repeat: no-repeat;
    padding:50px;

}
.bnr-contact .social-media h3{
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 34px;
    font-weight: 700;
    color:#fff
}
.bnr-contact .social-media-icons {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 25px 0px;
    gap: 30px;

}
.bnr-contact .social-media p{
    text-align: center;
    color:#fff;
    font-size: 20px;
    font-weight: 400;
}
/* ... */

